--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -55,6 +55,7 @@
     <select class="change-fixture">
       <option disabled selected>Select Fixture</option>
       <option value="./fixtures/reddit/index.html">Reddit</option>
+      <option value="./fixtures/dbmonster/index.html">DB Monster</option>
     </select>
 
     <h2 class="time"></h2>
