Rewriting diff logic

--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -52,7 +52,7 @@
   <header>
     <h2>diffhtml benchmark</h2>
 
-    <select class="change-fixture">
+    <select class="change-fixture" autocomplete="off">
       <option disabled selected>Select Fixture</option>
       <option value="./fixtures/reddit/index.html">Reddit</option>
       <option value="./fixtures/dbmonster/index.html">DB Monster</option>
