Mark dependencies better, fix relative links

--- a/benchmarks/fixtures/dbmonster/index.html
+++ b/benchmarks/fixtures/dbmonster/index.html
@@ -7,13 +7,12 @@
   <title>Dbmonster</title>
   <meta content="" name="description">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <base href="/">
   <meta content=
   "%7B%22modulePrefix%22%3A%22dbmonster%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22dbmonster%22%2C%22version%22%3A%220.0.0.60b85b8f%22%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D"
   name="dbmonster/config/environment">
-  <link href="benchmarks/fixtures/dbmonster/assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css" rel=
+  <link href="fixtures/dbmonster/assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css" rel=
   "stylesheet">
-  <link href="benchmarks/fixtures/dbmonster/assets/dbmonster-6db71256652546316dfdf5fb6b310e18.css" rel=
+  <link href="fixtures/dbmonster/assets/dbmonster-6db71256652546316dfdf5fb6b310e18.css" rel=
   "stylesheet">
 </head>
 
@@ -99,7 +98,7 @@
     </table>
   </div>
 
-  <script src="/dist/diffhtml.js"></script>
-  <script src="/benchmarks/fixtures/dbmonster/randomize.js"></script>
+  <script src="../dist/diffhtml.js"></script>
+  <script src="fixtures/dbmonster/randomize.js"></script>
 </body>
 </html>
