save point working with workers

--- a/test/playground.html
+++ b/test/playground.html
@@ -16,10 +16,8 @@
     var div = document.querySelector('div');
 
     //setInterval(function() {
-      div.outerDiffHTML = '<div class="' + Date.now() + '"></div>';
-    //}, 1000);
-
-    div.outerDiffHTML = '<div class="' + Date.now() + '"></div>';
+      div.outerDiffHTML = '<div class="' + Date.now() + '"><p>' + Date.now() + '</p></div>';
+    //}, 0);
   </script>
 </body>
 </html>
