Working through remaining unit tests

--- a/test/index.html
+++ b/test/index.html
@@ -1,17 +1,21 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Element.prototype.diffHTML Tests</title>
+  <title>diffhtml tests</title>
   <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
 </head>
 <body>
   <div id="mocha"></div>
   <script src="assert.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
+  <script src="../weakmap.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="../dist/diffhtml.js"></script>
   <script src="test.diffhtml.js"></script>
   <script>
+    // Don't try and use the web worker for now.
+    document.DISABLE_WORKER = true;
+
     mocha.checkLeaks();
 
     if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
