Starting over with tests and fixed some bugs

--- a/test/index.html
+++ b/test/index.html
@@ -11,12 +11,12 @@
   <script src="../weakmap.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="../dist/diffhtml.js"></script>
-  <script src="test.diffhtml.js"></script>
+  <!--<script src="test.diffhtml.js"></script>-->
+  <script src="tests/basics.js"></script>
+  <script src="tests/outer.js"></script>
   <script>
     // Don't try and use the web worker for now.
     document.DISABLE_WORKER = true;
-
-    mocha.checkLeaks();
 
     if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
     else { mocha.run(); }
