Add in missing files

--- a/test/index.html
+++ b/test/index.html
@@ -8,10 +8,9 @@
   <div id="mocha"></div>
   <script src="assert.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="../weakmap.js"></script>
+  <script src="../lib/support/weakmap.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="../dist/diffhtml.js"></script>
-  <!--<script src="test.diffhtml.js"></script>-->
   <script src="tests/basics.js"></script>
   <script src="tests/outer.js"></script>
   <script>
